--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ a {
 img {display: block;}
 
 /*--------------- popup ----------------*/
-#chk_popup {display: none;}
+/* #chk_popup {display: none;}
 
 #chk_popup:checked ~ .popup {display: none;}
 #chk_popup ~ .popup {display: block;}
@@ -35,7 +35,31 @@ img {display: block;}
   text-align: right;
   float: right;
 }
-.popup label:hover {background-color: #eee;}
+.popup label:hover {background-color: #eee;} */
+
+
+.popup_wrap {
+  width: 400px;
+  height: 500px;
+  position: absolute;
+  top: 80px; 
+  left: 50px;
+  z-index: 999;
+  /* display: none; */
+}
+.popup_close {
+  width: 26px;
+  height: 25px;
+  position: absolute;
+  top: -30px;
+  right: 0;
+}
+.popup_close>a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: url(https://img.icons8.com/metro/26/000000/close-window.png);
+}
 
 
 
@@ -68,6 +92,7 @@ img {display: block;}
     font-size: 11px;
     line-height: 25px;
     color: white;
+    cursor: pointer;
   }
   .header .gnb_box .gnb .gnb01 {
     float: left;
@@ -109,16 +134,13 @@ img {display: block;}
     top: -25px;
     right: 0;
     cursor: pointer;
+    font-weight: bold;
   }
 
   .login_popup {
     cursor: pointer;
   }
 
-  .wrap {
-  
-
-  }
 
   .idpw {
     width: 500px;
@@ -459,6 +481,9 @@ img {display: block;}
     }
     .banner_box div {
       float: left;
+    }
+    .banner_box>div:hover img {
+      
     }
     .banner_box .banner01 {
       margin-right: 20px;
@@ -4873,7 +4898,7 @@ img {display: block;}
 }
 
 
-/*--------------- top ----------------*/
+/*--------------- 탑버튼 ----------------*/
 #chk_more {display: none;}
 #chk_more:checked ~ .more_box {display: block;}
 #chk_more ~ .more_box {display: none;}
